// SPDX-FileCopyrightText: 2021-present Open Networking Foundation <info@opennetworking.org>
//
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package atomix.storage.proxy.gossip;

message GossipConfig {
    GossipClock clock = 1;
    uint32 replication_factor = 2;
}

message GossipClock {
    oneof clock {
        LogicalClock logical = 1;
        PhysicalClock physical = 2;
        EpochClock epoch = 3;
    }
}

message LogicalClock {

}

message PhysicalClock {

}

message EpochClock {
    EpochClockElection election = 1;
}

message EpochClockElection {
    string name = 1;
}
